# GStream

./: .travis.yml  CMakeLists.txt  LICENSE  README.md
include/: Attribute.h  Manager.h  Tuple.h  make_unique.h
include/data_container/: AStreamContainer.h  AStreamIterator.h  ListContainer.h  ListIterator.h
include/data_types/: ADataType.h  Blob.h  Double.h  ETypes.h  Geometry.h  Long.h  Null.h  String.h
include/operator/: AOperator.h  Input.h  Join.h  Operators.h  Select.h  Stream.h  View.h
include/operator/aggregation/: AAggregation.h  Max.h
include/operator/expression/: ACondition.h  EQ.h  GT.h  GTE.h  LT.h  LTE.h  NEQ.h
include/operator/windows/: ASpatialWindow.h  ATemporalWindow.h  AWindow.h  AreaWindow.h  JumpingDistanceWindow.h  SessionDistanceWindow.h  SlidingDistanceWindow.h  SlidingWindow.h  TiltingDistanceWindow.h  TiltingWindow.h  WaypointWindow.h
include/parser/: CQLParser.h  parser.h  parser.y  scanner.h  scanner.l  token.h
include/result_handler/: AResultHandler.h  ConsoleResultHandler.h
include/sqlite_adapter/: sqlite_adapter_cursor.h  sqlite_adapter_functions.h  sqlite_adapter_stream_module.h  sqlite_adapter_stream_table.h  sqlite_adapter_stream_view.h  sqlite_adapter_view_module.h  sqlite_result_handler.h
src/: Attribute.cpp  Manager.cpp  Tuple.cpp
src/data_container/: AStreamContainer.cpp  AStreamIterator.cpp  ListContainer.cpp  ListIterator.cpp
src/data_types/: ADataType.cpp  Blob.cpp  Double.cpp  Geometry.cpp  Long.cpp  Null.cpp  String.cpp
src/operator/: AOperator.cpp  Input.cpp  Join.cpp  Select.cpp  Stream.cpp  View.cpp
src/operator/aggregation/: AAggregation.cpp  Max.cpp
src/operator/expression/: ACondition.cpp
src/operator/windows/: ASpatialWindow.cpp  ATemporalWindow.cpp  AWindow.cpp  AreaWindow.cpp  JumpingDistanceWindow.cpp  SessionDistanceWindow.cpp  SlidingDistanceWindow.cpp  SlidingWindow.cpp  TiltingDistanceWindow.cpp  TiltingWindow.cpp  WaypointWindow.cpp
src/parser/: CQLParser.cpp  parser.cpp  scanner.cpp
src/result_handler/: AResultHandler.cpp  ConsoleResultHandler.cpp
src/sqlite_adapter/: sqlite_adapter_cursor.cpp  sqlite_adapter_functions.cpp  sqlite_adapter_stream_module.cpp  sqlite_adapter_stream_table.cpp  sqlite_adapter_stream_view.cpp  sqlite_adapter_view_module.cpp  sqlite_extension.cpp  sqlite_result_handler.cpp
test/data/: simulated_trajectory.gpkg
test/src/: gstream_test.py  tests.cpp  tests.h
tools/: setupEnvironment.sh  updateParserSources.sh
